select.result, select.test:   Added a test case for bug #11745. sql_select.cc:   Fixed bug # 11745.   Added support of where clause for queries with FROM DUAL. sql_yacc.yy:   Fixed bug # 11745.   Added optional where clause for queries with FROM DUAL.

sql/sql_yacc.yy:
  Fixed bug # 11745.
  Added optional where clause for queries with FROM DUAL.
sql/sql_select.cc:
  Fixed bug # 11745.
  Added support of where clause for queries with FROM DUAL.
mysql-test/t/select.test:
  Added a test case for bug #11745.
mysql-test/r/select.result:
  Added a test case for bug #11745.